fix: add top bar spacing

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #004f8c;
-  padding: 1rem;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-around;
 }
